apps/unifi/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: unifi
    name: unifi
  name: unifi
spec:
  finalizers:
    - kubernetes
