apps/unifi/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unifi
  labels:
    app: unifi-controller
  name: unifi-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi
        - name: nginx-proxy-config
          configMap:
            name: unifi-nginx-proxy-config
      containers:
        - name: unifi-network-application
          image: lscr.io/linuxserver/unifi-network-application:10.6.106 # {"$imagepolicy": "flux-system:unifi-network-application"}
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
          volumeMounts:
            - name: unifi
              mountPath: /config
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              memory: 2Gi
        - name: nginx-proxy
          image: nginx:alpine
          ports:
            - containerPort: 9080
          volumeMounts:
            - name: nginx-proxy-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 32Mi
