apps/unifi/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: unifi
  labels:
    app: unifi-controller
  name: unifi-controller
spec:
  ports:
    - name: "3478"
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: "10001"
      port: 10001
      protocol: UDP
      targetPort: 10001
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "9080"
      port: 9080
      targetPort: 9080
    - name: "8443"
      port: 8443
      targetPort: 8443
    - name: "8843"
      port: 8843
      targetPort: 8843
    - name: "8880"
      port: 8880
      targetPort: 8880
    - name: "6789"
      port: 6789
      targetPort: 6789
  selector:
    app: unifi-controller
  externalIPs:
    - ${METAL_LB_IP1}
