apps/unifi/ingress-tailscale.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: unifi
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: unifi-controller
      port:
        number: 9080
  tls:
    - hosts:
        - unifi
